<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/home_background">

    <LinearLayout
        android:id="@+id/activity_home_ll_top"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:weightSum="2"
        android:background="@drawable/back_logo">

        <ImageView
            android:id="@+id/iv_app_logo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_gravity="center_vertical"
            android:padding="5dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/app_logo"/>

        <com.agriscienceapp.font.AgriScienceTextView
            android:id="@+id/tv_pak_pasand"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:gravity="end"
            android:text="@string/str_pak_pasand"
            app:typeface="2"
            android:textStyle="bold"
            android:background="@drawable/back_logo_pak"
            android:textSize="14sp"
            android:padding="10dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="4.5"
        android:orientation="vertical"
        android:layout_below="@+id/activity_home_ll_top">

    <LinearLayout
        android:id="@+id/ll_main_first"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.1"
        android:layout_marginTop="10dp"
        android:orientation="vertical">
    <LinearLayout
        android:id="@+id/ll_first_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <ImageView
            android:id="@+id/iv_samachar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/samachar_home_new"/>

        <ImageView
            android:id="@+id/iv_bajar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/bajar_home_new"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_first_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_below="@id/ll_first_image"
        android:orientation="horizontal">

        <com.agriscienceapp.font.AgriScienceTextView
            android:id="@+id/tv_samachar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_samachar"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="14sp"
            android:textStyle="bold"
            app:typeface="2"
            android:textColor="@android:color/black"/>

        <com.agriscienceapp.font.AgriScienceTextView
            android:id="@+id/tv_bajar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="14sp"
            android:textStyle="bold"
            app:typeface="2"
            android:textColor="@android:color/black"
            android:text="@string/str_bajarbhav"/>

    </LinearLayout>
</LinearLayout>

    <LinearLayout
        android:id="@+id/ll_main_second"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.1"
        android:layout_below="@+id/ll_main_first"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/ll_second_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <ImageView
                android:id="@+id/iv_krushisalah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/krushisalah_home_new"/>

            <ImageView
                android:id="@+id/iv_khedutsafalgatha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/khedutgatha_home_new"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_second_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_below="@id/ll_first_image"
            android:orientation="horizontal">

            <com.agriscienceapp.font.AgriScienceTextView
                android:id="@+id/tv_krushisalah"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_Krushi_salah"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="14sp"
                android:textStyle="bold"
                app:typeface="1"
                android:textColor="@android:color/black"/>

            <com.agriscienceapp.font.AgriScienceTextView
                android:id="@+id/tv_khedutsafalgatha"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="14sp"
                android:textStyle="bold"
                app:typeface="1"
                android:textColor="@android:color/black"
                android:text="@string/str_khedut_safal_gatha"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_main_third"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.1"
        android:layout_below="@+id/ll_main_second"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/ll_third_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <ImageView
                android:id="@+id/iv_agriscience"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/tv"/>

            <ImageView
                android:id="@+id/iv_utara"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/utara_home_new"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_first_"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_below="@id/ll_first_image"
            android:orientation="horizontal">

            <com.agriscienceapp.font.AgriScienceTextView
                android:id="@+id/tv_agriscience"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_Tv"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="14sp"
                app:typeface="1"
                android:textColor="@android:color/black"/>

            <com.agriscienceapp.font.AgriScienceTextView
                android:id="@+id/tv_utara"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="14sp"
                android:textStyle="bold"
                app:typeface="1"
                android:textColor="@android:color/black"
                android:text="@string/str_Sat_utara"/>

        </LinearLayout>
    </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.2">
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
